--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 15 09:58:48 IST 2020
-sdk.dir=C\:\\Users\\DELL\\AppData\\Local\\Android\\Sdk
+#Tue Nov 17 03:03:43 IST 2020
+sdk.dir=/home/vimal/Android/Sdk
