--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/testdb?useSSL=false
-spring.datasource.username= airosodb
-spring.datasource.password= ^^?++bV5j\\[{Ug?(
+spring.datasource.url= jdbc:mysql://localhost:3306/airoso_db?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username= airoso
+spring.datasource.password= AdminAiroso@2020
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
 
 # App Properties
-aeroso.aerosoapi.app.jwtSecret= airosoSecurityKeyPrateekVimal
+aeroso.aerosoapi.app.jwtSecret= airosoSecurityKey
 aeroso.aerosoapi.app.jwtExpirationMs= 86400000
+
+spring.servlet.multipart.max-file-size=30MB
 
 
 #spring.datasource.url= jdbc:postgresql://localhost:5432/testdb
